<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <RelativeLayout
        android:id="@+id/signupGroup"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:gravity="center">

        <TextView
            android:id="@+id/signupTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            android:textSize="32sp"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/signupwlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/signupGroup"
        android:layout_marginTop="0dp"
        android:background="@drawable/rounded_border"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:gravity="center">


        <LinearLayout
            android:id="@+id/nameGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:background="@drawable/rounded_shadow"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/nameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_name"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/signup_hint_name"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/signupEmailGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nameGroup"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_shadow"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/emailTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/email_hint"
                android:textSize="15sp" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/signupPhoneGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signupEmailGroup"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_shadow"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/phoneTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number"
                android:textSize="15sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/signup_phNum_hint"
                android:inputType="number"
                android:textSize="15sp"
                tools:ignore="TextFields" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/signup_passwordGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signupPhoneGroup"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_shadow"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/signuppassTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="15sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/signupconfirmpassGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signup_passwordGroup"
            android:layout_marginTop="30dp"
            android:background="@drawable/rounded_shadow"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView

                android:id="@+id/signupCpassTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_confirmpass"
                android:textSize="15sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                android:textSize="15sp" />

        </LinearLayout>


        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/signupconfirmpassGroup"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/black"

            android:text="@string/signup_register" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnSubmit"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/sign_in_text"
            android:textStyle="bold" />

    </RelativeLayout>
</RelativeLayout>
    <!-- android:background="@drawable/rounded_btn"/> -->