<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <RelativeLayout
        android:id="@+id/imageGroup"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:gravity="center">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:src="@drawable/logo"
            android:background="@drawable/rounded_logo"
            android:scaleType="centerCrop"
            android:cropToPadding="true"
            android:layout_gravity="center"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/wlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/imageGroup"
        android:background="@drawable/rounded_border"
        android:padding="20dp"
        tools:layout_editor_absoluteX="-15dp"
        tools:layout_editor_absoluteY="-362dp">


        <TextView
            android:id="@+id/tvHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:text="@string/login"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/emailGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvHeading"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_shadow"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/emailTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/email_hint"
                android:textSize="15sp"
                android:inputType="textEmailAddress" />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/emailGroup"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_shadow"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/passTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="15sp"
                android:textStyle="bold"/>


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/password_hint"
                android:textSize="15sp"
                android:inputType="textPassword"/>

        </LinearLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordGroup"
            android:text="@string/login_btn"
            android:layout_marginTop="40dp"

            android:backgroundTint="@color/black" />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:layout_marginTop="70dp"
            android:layout_centerHorizontal="true"
            android:text="@string/signup_txt"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvRegister"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:text="@string/forgot_pass"
            android:textStyle="bold"/>



    </RelativeLayout>
</RelativeLayout>
    <!-- android:background="@drawable/rounded_btn"/> -->