<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <RelativeLayout
        android:id="@+id/helpGroup"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentTop="true"
        android:gravity="center">

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/whitelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/helpGroup"
        android:background="@drawable/rounded_border"
        android:padding="20dp"
        tools:layout_editor_absoluteX="-15dp"
        tools:layout_editor_absoluteY="-362dp">
        <ImageButton
            android:id="@+id/ic_back_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="Back"
            android:src="@drawable/back_arrow" />

        <TextView
            android:id="@+id/helpTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="Help and Support"
            android:gravity="center_horizontal"
            android:paddingLeft="90dp"
            android:textSize="24sp"
            android:textStyle="bold" />


        <LinearLayout
            android:id="@+id/support_emailGroup"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/helpTitle"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_shadow"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/helpemailTxt"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/emailInput"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/email_hint"
                android:textSize="15sp"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/suppnameGroup"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/support_emailGroup"
            android:layout_marginTop="40dp"
            android:background="@drawable/rounded_shadow"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/nameTxt"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/supportname"
                android:textSize="15sp"
                android:textStyle="bold"/>


            <EditText
                android:id="@+id/nameInput"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@null"
                android:hint="@string/helpname"
                android:textSize="15sp"
                android:clickable="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                />

        </LinearLayout>


        <EditText
            android:id="@+id/feedbackInput"
            android:layout_width="match_parent"
            android:layout_below="@+id/suppnameGroup"
            android:layout_height="245dp"
           android:layout_marginTop="40dp"
            android:background="@android:drawable/editbox_background"
            android:gravity="top"
            android:hint="Enter Your Feedback" />


        <Button
            android:id="@+id/submitBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/feedbackInput"
            android:text="@string/help_btn"
            android:layout_marginTop="40dp"
            android:backgroundTint="@color/black" />


    </RelativeLayout>
</RelativeLayout>
    <!-- android:background="@drawable/rounded_btn"/> -->